Finished design of all Views.

--- a/PizzaClient/src/views/CreateAccountView.form
+++ b/PizzaClient/src/views/CreateAccountView.form
@@ -126,7 +126,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="emailLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Email:"/>
+        <Property name="text" type="java.lang.String" value="Username:"/>
       </Properties>
     </Component>
   </SubComponents>
