--- a/PizzaClient/src/views/LoginView.form
+++ b/PizzaClient/src/views/LoginView.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <NonVisualComponents>
+    <Component class="controllers.LoginController" name="loginController1">
+    </Component>
+  </NonVisualComponents>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -90,6 +94,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="username">
+      <BindingProperties>
+        <BindingProperty name="text" source="loginController1" sourcePath="${username}" target="username" targetPath="text" updateStrategy="0" immediately="false">
+          <BindingParameter name="javax.swing.binding.ParameterKeys.TEXT_CHANGE_STRATEGY" value="javax.swing.binding.TextChangeStrategy.ON_TYPE"/>
+        </BindingProperty>
+      </BindingProperties>
     </Component>
     <Component class="javax.swing.JButton" name="submit">
       <Properties>
@@ -108,6 +117,11 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="password">
+      <BindingProperties>
+        <BindingProperty name="text" source="loginController1" sourcePath="${password}" target="password" targetPath="text" updateStrategy="0" immediately="false">
+          <BindingParameter name="javax.swing.binding.ParameterKeys.TEXT_CHANGE_STRATEGY" value="javax.swing.binding.TextChangeStrategy.ON_TYPE"/>
+        </BindingProperty>
+      </BindingProperties>
     </Component>
   </SubComponents>
 </Form>
