Added field value checks to make payment

--- a/PizzaClient/src/views/PaymentView.form
+++ b/PizzaClient/src/views/PaymentView.form
@@ -41,7 +41,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jTextField3" min="-2" pref="59" max="-2" attributes="0"/>
+                              <Component id="secCode" min="-2" pref="59" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="jLabel3" min="-2" pref="80" max="-2" attributes="0"/>
@@ -132,7 +132,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel11" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="jTextField3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="secCode" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -230,9 +230,9 @@
         <Property name="text" type="java.lang.String" value="Security Code:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField3">
+    <Component class="javax.swing.JTextField" name="secCode">
       <BindingProperties>
-        <BindingProperty name="text" source="controller" sourcePath="${model.sec}" target="jTextField3" targetPath="text" updateStrategy="0" immediately="false">
+        <BindingProperty name="text" source="controller" sourcePath="${model.sec}" target="secCode" targetPath="text" updateStrategy="0" immediately="false">
           <BindingParameter name="javax.swing.binding.ParameterKeys.TEXT_CHANGE_STRATEGY" value="javax.swing.binding.TextChangeStrategy.ON_TYPE"/>
         </BindingProperty>
       </BindingProperties>
